--- a/scss/app.scss
+++ b/scss/app.scss
@@ -31,7 +31,7 @@ aside{
     border: 1px solid $dark-blue-400;
     padding: 20px;
     height: 85vh;
-    width: 330px;
+    width: 380px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,36 +49,35 @@ aside{
         background: $white;
     }
     .copiar{
-        display: none;
-        margin: 0px 18px 0px 18px;
+        margin: 0px 23px 0px 23px;
         @extend %button-light;
-        width: 280px;
+        width: 250px;
         height: 67px;
         margin-right: 24px;
         position:absolute;
         bottom: 20px;
         &:hover{
             @extend %button-light-hover;
-            width: 300px;
+            width: 250px;
             height: 67px;
             margin-right: 24px;
         }
     }
     textarea{
-        display: none;
         position: absolute;
         top: 25px;
         border-radius: 24px;
         padding: $font-message;
         background: $white;
         border: none;
-        resize: non;
+        resize: none;
         font-family: $font-message;
         &:focus{
             outline: none;
         }
     }
 }
+
 .mensaje{
     text-align: center;
     background: $white;
@@ -125,7 +124,7 @@ form{
     p{
         display: flex;
         font-size: $font-sm;
-        margin:20px 0 10px 120px;
+        margin:20px 0 10px 130px;
         img{
             margin-right: 3px;
             width: 14px;
@@ -186,4 +185,11 @@ footer{
         text-decoration: none;
         color: inherit;
     }
+}
+
+.ocultar{
+    display: none;
+}
+.mostrar{
+    display: block;
 }
