--- a/scss/app.scss
+++ b/scss/app.scss
@@ -184,7 +184,12 @@ footer{
         background: inherit;
         text-decoration: none;
         color: inherit;
+        img{
+            width: 25px;
+            border-radius: 10px;
+        }
     }
+
 }
 
 .ocultar{
