--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,65 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+.group-btn :first-of-type {
+  background: #0A3871;
+  border: 1px solid #0A3871;
+  border-radius: 24px;
+  width: 99px;
+  height: 67px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #FFFF; }
+
+.group-btn :first-of-type:hover {
+  background: #072B61;
+  border: 1px solid #0A3871;
+  border-radius: 24px;
+  width: 99px;
+  height: 67px;
+  cursor: pointer;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #FFFF; }
+
+aside .copiar, .group-btn :last-of-type {
+  background: #FFFF;
+  border: 1px solid #0A3871;
+  border-radius: 24px;
+  width: 99px;
+  height: 67px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #0A3871; }
+
+aside .copiar:hover, .group-btn :last-of-type:hover {
+  background: #E9ECF8;
+  border: 1px solid #0A3871;
+  border-radius: 24px;
+  width: 99px;
+  height: 67px;
+  cursor: pointer;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #0A3871; }
+
 .group-btn :first-of-type {
   background: #0A3871;
   border: 1px solid #0A3871;
@@ -220,3 +280,46 @@ footer {
 
 .mostrar {
   display: block; }
+
+@media (min-width: 375px) and (max-width: 840px) {
+  header {
+    width: 320px; }
+  main {
+    height: auto;
+    flex-direction: column; }
+  aside {
+    position: none;
+    margin-top: 20px;
+    margin-right: 0;
+    width: 328px;
+    display: flex;
+    flex-direction: column; }
+    aside img {
+      display: none; }
+    aside textarea {
+      position: none;
+      font-size: 24px;
+      width: 328px; }
+  form {
+    width: 320px;
+    margin-top: 120px; }
+    form textarea {
+      margin-left: 0;
+      padding: 16px; }
+    form .group-btn {
+      margin-left: 0;
+      display: flex;
+      flex-direction: column; }
+    form p {
+      margin-left: 0; }
+  .mensaje {
+    width: 246px; }
+  .group-btn :first-of-type {
+    margin-bottom: 24px; }
+  footer {
+    height: auto;
+    margin-top: 20px; }
+  .ocultar {
+    display: none; }
+  .mostrar {
+    display: block; } }
